[package]
name = "molten"
version = "0.1.0"
authors = ["William Springer <wspringer@hioscar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"

[dependencies.syn]
version = "1.0.5"
features = ["full", "extra-traits"]
